[package]
name = "tower-cli"
version = "0.1.0"
edition = "2024"
description = "HARDWARIO TOWER console host CLI (`tower`): renders the framed serial link from the tower firmware."

[[bin]]
name = "tower"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serialport = "4"
rustyline = "14"
ratatui = "0.29"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
postcard = { version = "1", default-features = false }
serde = "1"
# The single source of truth for the wire format, shared with the firmware. Path dep
# during co-development; switch to a pinned git rev for releases.
tower-protocol = { path = "../../embassy/crates/tower-protocol" }
