[package]
name = "tower-cli"
version = "0.1.0"
edition = "2024"
description = "HARDWARIO TOWER console host CLI (`tower`): renders the framed serial link from the tower firmware."

[[bin]]
name = "tower"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serialport = "4"
rustyline = "14"
ratatui = "0.29"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
postcard = { version = "1", default-features = false }
serde = "1"
# Single source of truth for the wire format, shared with the firmware. postcard isn't
# self-describing, so both ends MUST be the same version — pinned to a firmware tag so a
# standalone clone builds reproducibly. Bump this tag in lockstep with any wire change.
# For side-by-side development against a local checkout, see `.cargo/config.toml`
# (gitignored `paths` override) — it doesn't touch Cargo.lock or affect other clones.
tower-protocol = { git = "https://github.com/hardwario/tower-firmware", tag = "tower-protocol-v0.1.0" }
